# AdventOfCode2023

./: .gitignore  01.expect  01.py  02.py  03.expect  03.py  04.expect  04.py  05.expect  05.py  06.py  07.expect  07.py  08.expect  08.py  09.py  10.py  11.py  12.expect  12.py  13.py  14.expect  14.py  15.expect  15.py  16.expect  16.py  17.expect  17.py  18.expect  18.py  19.py  20.expect  20.py  21.expect  21.py  22.expect  22.py  23.expect  23.py  (+9 more)
