[project]
name = "AdventOfCode2023"
description = "My solutions to Advent of Code 2023."
version = "1.0"
authors = [
    {name = "Johan Herland", email = "johan@herland.net"},
]
requires-python = ">=3.12"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",  # variable <name> is shadowing a Python builtin
    "A002",  # argument <name> is shadowing a Python builtin
    "ANN10",  # missing-type-self, missing-type-cls
    "COM812",  # trailing comma missing
    "D10",  # missing docstring in public/magic ...
    "ISC001",  # recommended when using `ruff format`
    "PLR2004",  # magic value used in comparison
    "PTH123",  # open() should be replaced by Path.open()
    "S101",  # assert
    "T20",  # print, p-print
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
