[project]
name = "AdventOfCode2023"
description = "My solutions to Advent of Code 2023."
version = "1.0"
authors = [
    {name = "Johan Herland", email = "johan@herland.net"},
]
requires-python = ">=3.12"
dependencies = [
    "bitsets",
    "sympy",
]

# I'd rather prefer something like "dev-dependencies" here, as the following
# are not really optional _runtime_ dependencies in the usual sense. See
# https://discuss.python.org/t/adding-a-non-metadata-installer-only-dev-dependencies-table-to-pyproject-toml/20106/1
# for the relevant upstream discussion. For now, this is "fine", as we don't
# expect this project to be _installed_ as such.
[project.optional-dependencies]
# Dependency groups per nox session
check = ["ruff"]
format = ["ruff"]
deps = ["fawltydeps"]
typing = ["mypy", "nox"]
tests = []
# Superset of the above groups define our dev environment
dev = [
    "fawltydeps",
    "mypy",
    "nox",
    "ruff",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",  # variable <name> is shadowing a Python builtin
    "A002",  # argument <name> is shadowing a Python builtin
    "ANN10",  # missing-type-self, missing-type-cls
    "B023",  # function definition does not bind loop variable ...
    "COM812",  # trailing comma missing
    "D10",  # missing docstring in public/magic ...
    "FIX002",  # line contains TODO, consider resolving the issue
    "ISC001",  # recommended when using `ruff format`
    "PGH003",  # use specific rule codes when ignoring type issues
    "PLR2004",  # magic value used in comparison
    "PLW2901",  # loop variable overwritten by assignment target
    "PT018",  # assertion should be broken down into multiple parts
    "PTH123",  # open() should be replaced by Path.open()
    "S101",  # assert
    "S311",  # standard pseudo-random generators unsuitable for crypto purposes
    "T20",  # print, p-print
    "TCH003",  # move standard library import ... into a type-checking block
    "TD002",  # missing author in TODO
    "TD003",  # missing issue link on the line following this TODO
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = ['*.py']
strict = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
warn_unreachable = true

show_error_context = true
show_column_numbers = true
pretty = true
